# cpp-soft-raster

./: CMakeLists.txt  CMakePresets.json  main.cpp  test.hpp
include/: Base.hpp  InputCodes.h  LMath.h  Window.h  WindowsWindow.h  aa.h
include/RGS/: Application.h  Base.hpp  FrameBuffer.h  LMath.h  Renderer.hpp  Window.h  WindowsWindow.h
include/RGS/Shaders/: BlinnShader.h  ShaderBase.h
src/: Application.cpp  CMakeLists.txt  FrameBuffer.cpp  LMath.cpp  Window.cpp  WindowsWindow.cpp
src/RGS/: Application.cpp  FrameBuffer.cpp  LMath.cpp  Renderer.cpp  Window.cpp  WindowsWindow.cpp
src/RGS/Shaders/: BlinnShader.cpp
